accommodation-2306212083-be/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accommodation-be
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accommodation-be
  template:
    metadata:
      labels:
        app: accommodation-be
    spec:
      containers:
        - name: accommodation-be
          image: muhammadyahya32/accommodation-be:REPLACE_ME_TAG
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
      restartPolicy: Always
