accommodation-2306212083-be/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accommodation-be-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: be.accommodation.hafizmuh.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: accommodation-be-service
                port:
                  number: 80
